--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 plugins {
     id 'org.springframework.boot' version '2.1.4.RELEASE'
-    id 'org.jetbrains.kotlin.jvm' version '1.2.71'
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.2.71'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.50'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.50'
 }
 
 apply plugin: 'io.spring.dependency-management'
 
 group = 'pl.poznan.put.oculus'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 sourceCompatibility = '1.8'
 
 repositories {
@@ -19,15 +19,18 @@ ext {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    // kotlin
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
 
+    // spring
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     implementation 'org.springframework.retry:spring-retry'
     implementation 'org.springframework.session:spring-session-core'
     implementation "org.springframework.boot:spring-boot-configuration-processor"
 
+    // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
