--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.2.0.RELEASE'
+    id 'org.springframework.boot' version '2.1.3.RELEASE'
     id 'org.jetbrains.kotlin.jvm' version '1.3.50'
     id 'org.jetbrains.kotlin.plugin.spring' version '1.3.50'
 }
@@ -7,7 +7,7 @@ plugins {
 apply plugin: 'io.spring.dependency-management'
 
 group = 'pl.poznan.put.oculus'
-version = '0.0.1'
+version = '0.1.0'
 sourceCompatibility = '1.8'
 
 repositories {
@@ -24,11 +24,7 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
 
     // spring
-    implementation 'org.springframework.boot:spring-boot-starter-cache'
-    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
-    implementation 'org.springframework.retry:spring-retry'
-    implementation 'org.springframework.session:spring-session-core'
-    implementation "org.springframework.boot:spring-boot-configuration-processor"
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway:2.1.3.RELEASE'
 
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
