--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=80
 oculus.patients-db-service=oculus-patients-db-service:80
 oculus.images-service=oculus-images-service:80
 oculus.facts-service=oculus-facts-service:80
+oculus.core-service=oculus-core-service:80
